--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         <div class="icon">💼</div>
                         <div>
                             <strong>LinkedIn</strong><br>
-                            <a href="linkedin.com/in/ahmed-alhabib">linkedin.com/in/ahmed-alhabib</a>
+                            <a href="http://linkedin.com/in/ahmed-alhabib-a63398350">linkedin.com/in/ahmed-alhabib</a>
                         </div>
                     </div>
                 </div>
