--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     <header class="header">
         <nav class="nav">
+            <button class="nav-toggle" aria-label="Toggle navigation">
+                <span class="hamburger"></span>
+            </button>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#education">Education</a></li>
@@ -255,7 +258,7 @@
                         <div class="icon">💼</div>
                         <div>
                             <strong>LinkedIn</strong><br>
-                            <a href="http://linkedin.com/in/ahmed-alhabib-a63398350">linkedin.com/in/ahmed-alhabib</a>
+                            <a href="linkedin.com/in/ahmed-alhabib">linkedin.com/in/ahmed-alhabib</a>
                         </div>
                     </div>
                 </div>
