--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Head section with metadata and external resources -->
 <head>
     <link rel="stylesheet" href="portfolio_css.css">
 
@@ -8,11 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahmed Alhabib - CV Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ysabeau+Infant:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
+
 
 </head>
 
 <body>
 
+    <!-- Header with navigation menu -->
     <header class="header">
         <nav class="nav">
             <button class="nav-toggle" aria-label="Toggle navigation">
@@ -28,8 +34,10 @@
             </ul>
         </nav>
     </header>
+    <!-- Navigation gradient line -->
     <div class="nav-gradient-line"></div>
 
+    <!-- Hero section with main introduction -->
     <section id="home" class="hero" data-bgcolor="#f7f7fa">
         <div class="container">
             <p class="subtitle">Information Technology Student & Enthusiast</p>
@@ -39,8 +47,10 @@
             </p>
         </div>
     </section>
+    <!-- Hero gradient line -->
     <div class="hero-gradient-line"></div>
 
+    <!-- About section with personal information -->
     <section id="about" class="section">
         <div class="container">
             <h2 class="section-title fade-in">About Me</h2>
@@ -60,6 +70,7 @@
         </div>
     </section>
 
+    <!-- Education section with academic background -->
     <section id="education" class="section" data-bgcolor="#ffffff">
         <div class="container">
             <h2 class="section-title fade-in">Education</h2>
@@ -90,6 +101,7 @@
         </div>
     </section>
 
+    <!-- Skills section -->
     <section id="skills" class="section" data-bgcolor="#f3f4f6">
         <div class="container">
             <h2 class="section-title fade-in">Skills & Technologies</h2>
@@ -158,6 +170,7 @@
         </div>
     </section>
 
+    <!-- Projects section showcasing work portfolio -->
     <section id="projects" class="section" data-bgcolor="#e5e7eb">
         <div class="container">
             <h2 class="section-title fade-in">Projects</h2>
@@ -195,6 +208,7 @@
         </div>
     </section>
 
+    <!-- Certificates section  -->
     <section id="certificates" class="section" data-bgcolor="#f7f7fa">
         <div class="container">
             <h2 class="section-title fade-in">Certificates</h2>
@@ -241,6 +255,7 @@
         </div>
     </section>
 
+    <!-- Contact section with contact information -->
     <section id="contact" class="section contact" data-bgcolor="#18181b">
         <div class="container">
             <h2 class="section-title fade-in">Get In Touch</h2>
@@ -265,10 +280,12 @@
             </div>
         </div>
     </section>
+    <!-- Scroll to top button -->
     <button id="scrollToTop" title="Go to top">
         <i class="fas fa-arrow-up"></i>
     </button>
 
+    <!-- JavaScript file reference -->
     <script src="portfolio_js.js"></script>
 
 </body>
